--- a/.github/workflows/web-ext.yml
+++ b/.github/workflows/web-ext.yml
@@ -44,7 +44,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: dist/artifacts/-${{ steps.release.outputs.version }}*
+          file: dist/artifacts/*-${{ steps.release.outputs.version }}*
           tag: ${{ github.ref }}
           overwrite: true
           file_glob: true
